# HiLite

./: .dockerignore  .env  .env.exemple  .gitignore  PIPELINE.md  docker-compose.yaml  dockerfile  flow_demo_v1.py  package-lock.json  pyproject.toml  requirements.txt  run.py
backend/: .dockerignore  .env.exemple  .gitignore  dockerfile  pyproject.toml
backend/src/: run.py
backend/src/api/: dependencies.py
backend/src/api/routes/: app_routes.py  auth_routes.py
backend/src/buisness/: eleven_labs_buisness.py
backend/src/buisness/db/: twitch_token_business.py  user_business.py
backend/src/config/: settings.py
backend/src/data/: clip_blacklist.csv
backend/src/middlewares/: cors.py
backend/src/models/: twitch_token_model.py  user_model.py
backend/src/models/dto/: dto_twitch_token_model.py
backend/src/repositories/: twitch_token_repository.py  user_repository.py
backend/src/security/: twitch_signature.py
backend/src/services/: eleven_labs_service.py  eventsub_service.py  srt_service.py  supabase_service.py  twitch_service.py
backend/tests/unit_tests/buisness/: test_eleven_labs_buisness.py  test_subtitles_buisness.py  test_twitch_buisness.py
backend/tests/unit_tests/services/: test_eleven_labs_service.py  test_twitch_service.py
buisness/: eleven_labs_buisness.py  scraping_buisness.py  srt_buisness.py  subtitlesBuisness.py  subtitles_buisness.py  twitch_buisness.py
config/: logger_conf.py
data/: clip_blacklist.csv  titles_template.json
frontend-react/: dockerfile  dockerfile.dev  nginx.conf  package-lock.json  package.json  vite.config.ts
(+67 files in other folders)
